.resources/k8/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v2.6
        args:
          - "--api.insecure=true"
          - "--providers.kubernetescrd"
          - "--entrypoints.web.address=:80"
          - "--entrypoints.websecure.address=:443"
        ports:
        - name: web
          containerPort: 80
        - name: websecure
          containerPort: 443
        volumeMounts:
          - mountPath: /etc/traefik
            name: traefik-config
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
