.resources/k8/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: websecure
    port: 443
    targetPort: 443
  selector:
    app: traefik
  type: NodePort # You can use NodePort if LoadBalancer is not available
